--- a/contracts/04-tamagotchi-shop/Cargo.toml
+++ b/contracts/04-tamagotchi-shop/Cargo.toml
@@ -8,6 +8,8 @@ publish.workspace = true
 [dependencies]
 gstd.workspace = true
 tamagotchi-shop-io.workspace = true
+ft-main-io.workspace = true
+store-io.workspace = true
 
 [build-dependencies]
 gear-wasm-builder.workspace = true
