Update Tamagotchi shop

--- a/contracts/04-tamagotchi-shop/Cargo.toml
+++ b/contracts/04-tamagotchi-shop/Cargo.toml
@@ -8,7 +8,7 @@ publish.workspace = true
 [dependencies]
 gstd.workspace = true
 tamagotchi-shop-io.workspace = true
-ft-main-io.workspace = true
+sharded-fungible-token-io.workspace = true
 store-io.workspace = true
 
 [build-dependencies]
