--- a/contracts/05-tamagotchi-auto/store/Cargo.toml
+++ b/contracts/05-tamagotchi-auto/store/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
-name = "tamagotchi-auto"
+name = "store"
 version.workspace = true
 edition.workspace = true
 publish.workspace = true
 
 [dependencies]
 gstd.workspace = true
-tamagotchi-auto-io.workspace = true
-sharded-fungible-token-io.workspace = true
 store-io.workspace = true
+sharded-fungible-token-io.workspace = true
 
 [build-dependencies]
 gear-wasm-builder.workspace = true
-tamagotchi-auto-io.workspace = true
-
-[dev-dependencies]
-gtest.workspace = true
+store-io.workspace = true
