--- a/contracts/07-coursework-battle/io/Cargo.toml
+++ b/contracts/07-coursework-battle/io/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tamagotchi-auto-io"
+name = "coursework-battle-io"
 version.workspace = true
 edition.workspace = true
 publish.workspace = true
