--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "04-tamagotchi-shop/upload",
     "05-tamagotchi-auto",
     "06-tamagotchi-army",
+    "07-coursework-battle/battle/io",
 ]
 
 [workspace.dependencies]
@@ -36,6 +37,7 @@ tamagotchi-shop-io.path = "04-tamagotchi-shop/io"
 store-io.path = "04-tamagotchi-shop/store/io"
 tamagotchi-auto-io.path = "05-tamagotchi-auto/io"
 tamagotchi-army-io.path = "06-tamagotchi-army/io"
+coursework-battle-io.path = "07-coursework-battle/battle/io"
 
 tokio = "1"
 
