--- a/contracts/07-coursework-battle/battle/io/Cargo.toml
+++ b/contracts/07-coursework-battle/battle/io/Cargo.toml
@@ -8,3 +8,10 @@ edition = "2021"
 [dependencies]
 gstd.workspace = true
 gmeta.workspace = true
+store-io.workspace = true
+coursework-battle-io.workspace = true
+
+[build-dependencies]
+gear-wasm-builder.workspace = true
+store-io.workspace = true
+coursework-battle-io.workspace = true
