--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -17,7 +17,9 @@ members = [
     "04-tamagotchi-shop/upload",
     "05-tamagotchi-auto",
     "06-tamagotchi-army",
-    "07-coursework-battle/battle/io",
+    "07-coursework-battle",
+    "07-coursework-battle/battle",
+    "07-coursework-battle/store",
 ]
 
 [workspace.dependencies]
@@ -37,7 +39,8 @@ tamagotchi-shop-io.path = "04-tamagotchi-shop/io"
 store-io.path = "04-tamagotchi-shop/store/io"
 tamagotchi-auto-io.path = "05-tamagotchi-auto/io"
 tamagotchi-army-io.path = "06-tamagotchi-army/io"
-coursework-battle-io.path = "07-coursework-battle/battle/io"
+coursework-battle-io.path = "07-coursework-battle/io"
+battle-io.path = "07-coursework-battle/battle/io"
 
 tokio = "1"
 
