Debug with Luchex

--- a/contracts/07-coursework-battle/battle/Cargo.toml
+++ b/contracts/07-coursework-battle/battle/Cargo.toml
@@ -10,9 +10,11 @@ gstd.workspace = true
 store-io.workspace = true
 sharded-fungible-token-io.workspace = true
 battle-io.workspace = true
+coursework-battle-io.workspace = true
 
 
 [build-dependencies]
 gear-wasm-builder.workspace = true
 store-io.workspace = true
 battle-io.workspace = true
+coursework-battle-io.workspace = true
