--- a/contracts/07-coursework-battle/battle/Cargo.toml
+++ b/contracts/07-coursework-battle/battle/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 gstd.workspace = true
+gmeta.workspace = true
 store-io.workspace = true
 sharded-fungible-token-io.workspace = true
 battle-io.workspace = true
